--- a/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
@@ -18,15 +18,15 @@ DATASERVER_SOURCE_LIST_HEADER=version.h ds_define.h super_block_manager.h physic
 physical_block_manager.h index_handlev2.h data_handlev2.h data_file.h\
 logic_blockv2.h logic_block_manager.h block_manager.h data_manager.h \
 lease_manager.h gc.h visit_stat.h requester.h cpu_metrics.h \
-client_request_server.h sync_base.h sync_backup.h \
-data_management.h dataservice.h 
+client_request_server.h sync_base.h sync_backup.h data_management.h \
+dataservice.h data_helper.h galois.h jerasure.h erasure_code.h
 
 DATASERVER_SOURCE_LIST=version.cpp ds_define.cpp super_block_manager.cpp physical_blockv2.cpp\
 physical_block_manager.cpp index_handlev2.cpp data_handlev2.cpp data_file.cpp \
 logic_blockv2.cpp logic_block_manager.cpp block_manager.cpp data_manager.cpp \
 lease_manager.cpp gc.cpp visit_stat.cpp requester.cpp cpu_metrics.cpp \
-client_request_server.cpp sync_base.cpp sync_backup.cpp \
-data_management.cpp dataservice.cpp 
+client_request_server.cpp sync_base.cpp sync_backup.cpp data_management.cpp \
+dataservice.cpp data_helper.cpp galois.cpp jerasure.cpp erasure_code.cpp 
 
 libdataserver_a_SOURCES=$(DATASERVER_SOURCE_LIST) $(DATASERVER_SOURCE_LIST_HEADER)
 
