--- a/branches/dev_tair_meta_from_2.2.12/conf/kv_meta.conf
+++ b/branches/dev_tair_meta_from_2.2.12/conf/kv_meta.conf
@@ -10,7 +10,10 @@ dev_name = bond0
 port = 3600
 
 [kvmetaserver]
-tair_master = 10.235.145.80:5198;
-tair_slave = 10.235.145.82:5198;
+tair_master = 10.2.2.2:0000;
+tair_slave = 10.2.2.2:0000;
 tair_group = group_ldbcommon;
-tair_object_area = 630;
+tair_object_area = 21;
+kv_meta_ip_port = 10.2.3.1:0000
+kv_root_ip_port = 10.2.3.1:0000 
+
