--- a/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
@@ -3,9 +3,9 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbnet\
 						$(MYSQL_CFLAGS)
 
-AM_LDFLAGS=-lrt -lpthread -ldl $(MYSQL_LDFLAGS)
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid $(MYSQL_LDFLAGS)
 
-bin_PROGRAMS = meta_transfer txt2new
+bin_PROGRAMS = meta_transfer txt2new check_old_new
 
 LDADD =	$(top_builddir)/src/new_client/.libs/libtfsclient.a \
 				$(top_builddir)/src/name_meta_server/libnamemetaserver.a \
@@ -17,4 +17,5 @@ LDADD =	$(top_builddir)/src/new_client/.libs/libtfsclient.a \
 
 meta_transfer_SOURCES = trans_meta.cpp
 txt2new_SOURCES = txt2newmeta.cpp
+check_old_new_SOURCES = check_old_new.cpp
 
