--- a/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
@@ -14,7 +14,7 @@ LDADD=$(top_builddir)/src/new_client/.libs/libtfsclient.a\
 
 noinst_LIBRARIES = libdataserver.a
 
-DATASERVER_SOURCE_LIST_HEADER=ds_define.h super_block_manager.h physical_blockv2.h\
+DATASERVER_SOURCE_LIST_HEADER=ds_define.h blockfile_format.h super_block_manager.h physical_blockv2.h\
 physical_block_manager.h index_handlev2.h data_handlev2.h data_file.h\
 logic_blockv2.h logic_block_manager.h block_manager.h data_manager.h \
 lease_manager.h gc.h requester.h \
@@ -31,18 +31,6 @@ dataservice.cpp data_helper.cpp galois.cpp jerasure.cpp erasure_code.cpp task_ma
 traffic_control.cpp heart_manager.cpp
 
 libdataserver_a_SOURCES=$(DATASERVER_SOURCE_LIST) $(DATASERVER_SOURCE_LIST_HEADER)
-
-#libdataserver_a_SOURCES = visit_stat.cpp version.cpp mmap_file_op.cpp\
-#			  superblock_impl.cpp physical_block.cpp bit_map.cpp index_handle.cpp gc.cpp\
-#			  data_file.cpp cpu_metrics.cpp logic_block.cpp data_handle.cpp blockfile_manager.cpp\
-#			  data_management.cpp check_block.cpp sync_backup.cpp task_manager.cpp task.cpp\
-#			  sync_base.cpp requester.cpp file_repair.cpp block_checker.cpp dataservice.cpp\
-#				galois.cpp jerasure.cpp erasure_code.cpp lease_manager.cpp galois.h jerasure.h erasure_code.h\
-#				bit_map.h block_checker.h blockfile_format.h blockfile_manager.h block_status.h\
-#				cpu_metrics.h data_file.h data_handle.h data_management.h task.h\
-#				dataserver_define.h file_repair.h index_handle.h logic_block.h lease_manager.h\
-#				mmap_file_op.h physical_block.h check_block.h requester.h gc.h task_manager.h\
-#				superblock_impl.h sync_backup.h sync_base.h version.h visit_stat.h dataservice.h
 
 bin_PROGRAMS = dataserver
 dataserver_SOURCES = service.cpp ${libdataserver_a_SOURCES}
