--- a/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
@@ -2,12 +2,14 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet\
 						$(MYSQL_CFLAGS)
+						$(READLINE_INCLUDE)
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid $(MYSQL_LDFLAGS)
+AM_LDFLAGS=-lz -lrt -lpthread -ldl $(READLINE_LIB) -luuid $(MYSQL_LDFLAGS)
 
-bin_PROGRAMS = meta_transfer txt2new check_old_new sync_nginx2kv
+bin_PROGRAMS = meta_transfer txt2new check_old_new sync_nginx2kv go_tair_for_kv
 
-LDADD =	$(top_builddir)/src/new_client/.libs/libtfsclient.a \
+LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
+				$(top_builddir)/src/new_client/.libs/libtfsclient.a \
 				$(top_builddir)/src/name_meta_server/libnamemetaserver.a \
         $(TAIR_CACHE_LDFLAGS) \
 				$(top_builddir)/src/message/libtfsmessage.a\
@@ -19,4 +21,5 @@ meta_transfer_SOURCES = trans_meta.cpp
 txt2new_SOURCES = txt2newmeta.cpp
 check_old_new_SOURCES = check_old_new.cpp
 sync_nginx2kv_SOURCES = sync_nginx2kv.cpp
+go_tair_for_kv_SOURCES = go_tair_for_kv.cpp
 
