--- a/branches/dev_tair_meta_from_2.2.12/src/new_client/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/new_client/Makefile.am
@@ -26,14 +26,14 @@ api_source_list = tfs_file.cpp tfs_large_file.cpp tfs_small_file.cpp tfs_session
                   tfs_rc_helper.cpp tfs_rc_client_api.cpp tfs_rc_client_api_impl.cpp \
 									tfs_meta_helper.cpp tfs_meta_manager.cpp tfs_meta_client_api_impl.cpp \
 								 	tfs_meta_client_api.cpp tfs_kv_meta_client_impl.cpp tfs_kv_meta_client_api.cpp\
-                  tfs_kv_meta_helper.cpp \
+                  tfs_kv_meta_helper.cpp tfs_cluster_manager.cpp\
 									bg_task.h client_config.h fsname.h gc_file.h gc_worker.h local_key.h\
 									lru.h md5.h segment_container.h tfs_client_api.h tfs_client_capi.h\
 									tfs_client_impl.h tfs_client_metrics.h tfs_file.h tfs_large_file.h\
 									tfs_rc_client_api.h tfs_rc_client_api_impl.h tfs_rc_helper.h tfs_session.h \
 									tfs_meta_client_api.h tfs_meta_client_api_impl.h tfs_meta_helper.h tfs_meta_manager.h \
                   tfs_kv_meta_client_impl.h tfs_kv_meta_client_api.h tfs_kv_meta_helper.h \
-									tfs_session_pool.h tfs_small_file.h ${unique_store_source} \
+									tfs_session_pool.h tfs_small_file.h tfs_cluster_manager.h ${unique_store_source} \
                   ${tair_cache_source}
 
 ld_fg = $(AM_LDFLAGS) \
