--- a/branches/tfs-tmp-trunk/src/tools/nameserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/tools/nameserver/Makefile.am
@@ -4,7 +4,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbnet\
 	    $(READLINE_INCLUDE)
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl $(READLINE_LIB) -luuid
+AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz
 
 bin_PROGRAMS = admintool showsyncoplog rmsyncoplog ssm tfstool performance syncbyfile\
                read_syncoplog_header repair_block_info
