--- a/branches/tfs-tmp-trunk/tests/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/tests/dataserver/Makefile.am
@@ -1,6 +1,7 @@
 AM_CPPFLAGS=-I${top_srcdir}/src/dataserver \
             -I$(top_srcdir)/src \
 						-I${top_srcdir}/src/common \
+						-I${top_srcdir}/src/message \
 						-I$(TBLIB_ROOT)/include/tbsys \
 						-I$(TBLIB_ROOT)/include/tbnet 
 
@@ -21,7 +22,7 @@ TESTS=
 check_PROGRAMS=
 
 noinst_PROGRAMS=test_super_block_manager test_data_file test_physical_block test_physical_block_manager\
-	test_index_handlev2 test_logic_blockv2 test_block_manager
+	test_index_handlev2 test_logic_blockv2 test_block_manager test_erasure_code test_check_manager
 
 test_super_block_manager_SOURCES=test_super_block_manager.cpp
 test_super_block_manager_LDFLAGS=${AM_LDFLAGS}
@@ -43,3 +44,10 @@ test_logic_blockv2_LDFLAGS=${AM_LDFLAGS}
 
 test_block_manager_SOURCES=test_block_manager.cpp
 test_block_manager_LDFLAGS=${AM_LDFLAGS}
+
+test_erasure_code_SOURCES=test_erasure_code.cpp
+test_erasure_code_LDFLAGS=${AM_LDFLAGS}
+
+test_check_manager_SOURCES=test_check_manager.cpp
+test_check_manager_LDFLAGS=${AM_LDFLAGS}
+
