--- a/branches/tfs-tmp-trunk/src/nameserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/nameserver/Makefile.am
@@ -2,14 +2,11 @@
 AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet\
-						$(MYSQL_CFLAGS)\
 	    			$(TAIR_STORE_CPPFLAGS)
 
 #AM_LDFLAGS=-lz -lrt -lpthread -ldl -lgcov
 #AM_LDFLAGS=-lz -lrt -lpthread -ldl -rdynamic ${TCMALLOC_LDFLAGS}
 AM_LDFLAGS=-lz -lrt -lpthread -ldl -rdynamic $(TAIR_STORE_LDFLAGS) -lsnappy
-
-AM_LDFLAGS+=$(MYSQL_LDFLAGS) 
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
@@ -33,12 +30,12 @@ noinst_LIBRARIES=libnameserver.a
 NAMESERVER_SOURCE_LIST_HEADER=block_collect.h block_id_factory.h block_manager.h client_request_server.h gc.h\
 global_factory.h heart_manager.h layout_manager.h nameserver.h ns_define.h\
 oplog.h oplog_sync_manager.h server_collect.h server_manager.h task.h task_manager.h\
-database_helper.h family_collect.h family_manager.h tair_helper.h
+family_collect.h family_manager.h tair_helper.h
 
 NAMSERVER_SOURCE_LIST=block_collect.cpp block_manager.cpp  server_collect.cpp\
 	task.cpp task_manager.cpp server_manager.cpp layout_manager.cpp block_id_factory.cpp global_factory.cpp\
 	oplog.cpp oplog_sync_manager.cpp client_request_server.cpp gc.cpp\
-	ns_define.cpp nameserver.cpp heart_manager.cpp database_helper.cpp family_collect.cpp\
+	ns_define.cpp nameserver.cpp heart_manager.cpp family_collect.cpp\
 	family_manager.cpp tair_helper.cpp\
 	$(NAMESERVER_SOURCE_LIST_HEADER)
 
