--- a/branches/dev_tair_meta_from_2.2.12/src/common/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/common/Makefile.am
@@ -2,7 +2,7 @@ AM_CPPFLAGS=-I$(TBLIB_ROOT)/include/tbsys\
 	    -I$(TBLIB_ROOT)/include/tbnet\
 	    -fpic
 
-AM_LDFLAGS=-lrt -lpthread -ldl
+AM_LDFLAGS=-lrt -lpthread -ldl -luuid
 
 noinst_LIBRARIES = libtfscommon.a
 
