--- a/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
@@ -2,11 +2,12 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
       $(TAIR_CACHE_CPPFLAGS)\
 	    -I$(TBLIB_ROOT)/include/tbsys\
       -I$(TBLIB_ROOT)/include/tbnet\
-	    $(READLINE_INCLUDE)
+	    $(READLINE_INCLUDE)\
+			$(TAIR_STORE_CPPFLAGS)
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz
 
-bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order 
+bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order  import_family_info export_family_info
 
 if WITH_TAIR_CACHE
 bin_PROGRAMS += remote_block_cache_tool
@@ -14,11 +15,13 @@ endif
 
 LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
+	$(top_builddir)/src/nameserver/libnameserver.a\
 	$(top_builddir)/src/requester/libtfsrequester.a\
 	$(top_builddir)/src/message/libtfsmessage.a\
 	$(top_builddir)/src/common/libtfscommon.a\
 	$(UNIQUE_STORE_LDFLAGS)\
   $(TAIR_CACHE_LDFLAGS) \
+	$(TAIR_STORE_LDFLAGS) \
 	$(TBLIB_ROOT)/lib/libtbnet.a\
 	$(TBLIB_ROOT)/lib/libtbsys.a\
 	-lz
@@ -37,3 +40,5 @@ endif
 repair_file_tool_SOURCES=repair_file_tool.cpp
 stat_tool_SOURCES=stat_main.cpp stat_tool.cpp stat_tool.h common.cpp common.h
 gen_compact_blk_order_SOURCES = gen_compact_blk_order.cpp common.cpp common.h
+import_family_info_SOURCES = import_family_info.cpp
+export_family_info_SOURCES = export_family_info.cpp
