--- a/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
@@ -7,7 +7,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz
 
-bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order  import_family_info export_family_info
+bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order # import_family_info export_family_info
 
 if WITH_TAIR_CACHE
 bin_PROGRAMS += remote_block_cache_tool
@@ -40,5 +40,5 @@ endif
 repair_file_tool_SOURCES=repair_file_tool.cpp
 stat_tool_SOURCES=stat_main.cpp stat_tool.cpp stat_tool.h common.cpp common.h
 gen_compact_blk_order_SOURCES = gen_compact_blk_order.cpp common.cpp common.h
-import_family_info_SOURCES = import_family_info.cpp
-export_family_info_SOURCES = export_family_info.cpp
+#import_family_info_SOURCES = import_family_info.cpp
+#export_family_info_SOURCES = export_family_info.cpp
