--- a/branches/stable-2.5.3/src/tools/Makefile.am
+++ b/branches/stable-2.5.3/src/tools/Makefile.am
@@ -1,3 +1,3 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS = util dataserver nameserver rcserver cluster workers
+SUBDIRS = util dataserver rcserver cluster workers
