--- a/branches/easy_dev/src/requester/Makefile.am
+++ b/branches/easy_dev/src/requester/Makefile.am
@@ -1,6 +1,7 @@
 AM_CPPFLAGS =-fPIC -I$(top_srcdir)/src\
 	     -I$(TBLIB_ROOT)/include/tbsys\
-	     -I$(TBLIB_ROOT)/include/tbnet
+	     -I$(TBLIB_ROOT)/include/tbnet\
+			 -I$(EASY_ROOT)/include/easy
 
 AM_LDFLAGS=-lrt -lpthread -ldl
 
@@ -9,7 +10,8 @@ LDADD=$(top_builddir)/src/message/libtfsmessage.a\
       $(UNIQUE_STORE_LDFLAGS)\
       $(TAIR_CACHE_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a\
-      $(TBLIB_ROOT)/lib/libtbsys.a
+      $(TBLIB_ROOT)/lib/libtbsys.a\
+			$(EASY_ROOT)/lib/libeasy.a
 
 noinst_LIBRARIES = libtfsrequester.a libtfssyncutil.a
 
