--- a/branches/stable-2.5.7/src/migrateserver/Makefile.am
+++ b/branches/stable-2.5.7/src/migrateserver/Makefile.am
@@ -1,8 +1,9 @@
 AM_CPPFLAGS =-I$(top_srcdir)/src\
 	     -I$(TBLIB_ROOT)/include/tbsys\
-	     -I$(TBLIB_ROOT)/include/tbnet
+	     -I$(TBLIB_ROOT)/include/tbnet\
+			 -I$(EASY_ROOT)/include/easy
 
-AM_LDFLAGS=-lrt -lpthread -ldl
+AM_LDFLAGS=-lrt -lpthread -ldl -lssl
 
 LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
       $(top_builddir)/src/requester/libtfsrequester.a\
@@ -11,7 +12,8 @@ LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
       $(UNIQUE_STORE_LDFLAGS)\
       $(TAIR_CACHE_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a\
-      $(TBLIB_ROOT)/lib/libtbsys.a
+      $(TBLIB_ROOT)/lib/libtbsys.a\
+			$(EASY_ROOT)/lib64/libeasy.a
 
 noinst_LIBRARIES = libmigrateserver.a
 
