--- a/branches/stable-2.5.7/src/rcserver/Makefile.am
+++ b/branches/stable-2.5.7/src/rcserver/Makefile.am
@@ -1,15 +1,16 @@
 AM_CPPFLAGS= -Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet \
+						-I$(EASY_ROOT)/include/easy \
 						$(MYSQL_CFLAGS)
 
-
-AM_LDFLAGS= $(MYSQL_LDFLAGS) -lz -lrt -lpthread -ldl -luuid
+AM_LDFLAGS= $(MYSQL_LDFLAGS) -lz -lrt -lpthread -ldl -luuid -lssl
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
       $(TBLIB_ROOT)/lib/libtbnet.a \
-      $(TBLIB_ROOT)/lib/libtbsys.a 
+      $(TBLIB_ROOT)/lib/libtbsys.a \
+			$(EASY_ROOT)/lib64/libeasy.a 
 
 noinst_LIBRARIES=librcserver.a
 
