--- a/branches/stable-2.5.7/src/kv_meta_server/Makefile.am
+++ b/branches/stable-2.5.7/src/kv_meta_server/Makefile.am
@@ -1,15 +1,18 @@
 AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
-            -I$(TBLIB_ROOT)/include/tbnet $(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)
+            -I$(TBLIB_ROOT)/include/tbnet \
+						-I$(EASY_ROOT)/include/easy \
+						$(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid $(TAIR_META_LDFLAGS) 
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -lssl $(TAIR_META_LDFLAGS) 
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/mysql_cluster/libkvengine_mysql.a \
       $(top_builddir)/src/common/libtfscommon.a $(TAIR_META_LDFLAGS)\
 			$(MYSQL_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a \
-      $(TBLIB_ROOT)/lib/libtbsys.a 
+      $(TBLIB_ROOT)/lib/libtbsys.a \
+			$(EASY_ROOT)/lib64/libeasy.a
 
 noinst_LIBRARIES=libkvmetaserver.a libkvrootserver.a
 
